<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/txtNomSpeedRun"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/SpeedRunFormHint1"
        android:layout_marginBottom="5sp"/>
    <EditText
        android:id="@+id/txtCategorie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/SpeedRunFormHint2"
        android:layout_marginBottom="5sp"/>
    <CheckBox
        android:id="@+id/chkEmulator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/SpeedRunForm2"
        android:textSize="17sp"
        android:layout_marginBottom="3sp"
        android:layout_marginLeft="5sp"/>
</LinearLayout>