<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="dtuqac.runtimerapp.SpeedRunForm"
    tools:showIn="@layout/activity_speed_run_form">

<LinearLayout
    android:layout_width="368dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5sp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/SpeedRunForm1"
        android:textColor="@color/colorMainText"
        android:textSize="20sp"
        android:layout_marginBottom="15sp" />
    <EditText
        android:id="@+id/txtNomSpeedRun"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/SpeedRunFormHint1"
        android:layout_marginBottom="5sp"/>
    <EditText
        android:id="@+id/txtCategorie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/SpeedRunFormHint2"
        android:layout_marginBottom="5sp"/>
    <CheckBox
        android:id="@+id/chkEmulator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/SpeedRunForm2"
        android:textSize="17sp"
        android:layout_marginBottom="3sp"
        android:layout_marginLeft="5sp"/>

    <!-->

    Pas besoin pour le moment
    TODO ajouter un picker pour l'offset (avec minutes et secondes)

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/txtOffset"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:onClick="showTimePicker"
            android:text="@string/SpeedRunForm3" />

    </LinearLayout>
    <!-->
</LinearLayout>

</android.support.constraint.ConstraintLayout>
